--- a/index.html
+++ b/index.html
@@ -138,6 +138,32 @@
             background-color: #fff0f5;
         }
 
+        .store-item.completed {
+            background-color: #d4edda;
+            border-color: #28a745;
+        }
+
+        .store-item.completed::after {
+            content: " ✓";
+            color: #28a745;
+            font-weight: bold;
+            font-size: 16px;
+        }
+
+        /* 処理実行済み（更新なし） */
+        .store-item.processed {
+            background-color: #e8f4f8;
+            border-color: #17a2b8;
+            opacity: 0.9;
+        }
+
+        .store-item.processed::after {
+            content: " ◇";
+            color: #17a2b8;
+            font-weight: bold;
+            font-size: 14px;
+        }
+
         .drag-handle {
             width: 16px;
             height: 16px;
@@ -314,10 +340,14 @@
             <button class="submit-btn" id="saveOrderBtn" onclick="saveOrder()">
                 並び順を保存（CSV反映）
             </button>
+        </div>
+    </div>
 
     <script>
         let stores = [];
         let selectedSet = new Set();
+        let completedStores = [];   // データ更新があった店舗
+        let processedStores = [];   // 処理を実行した店舗（更新なしも含む）
 
         // ページロード時に店舗リストを取得
         async function loadStores() {
@@ -343,13 +373,20 @@
                 return;
             }
 
-            container.innerHTML = stores.map((store, index) => `
-                <div class="store-item" draggable="true" data-index="${index}">
+            container.innerHTML = stores.map((store, index) => {
+                const className = completedStores.includes(store.name)
+                    ? 'completed'
+                    : processedStores.includes(store.name)
+                        ? 'processed'
+                        : '';
+
+                return `
+                <div class="store-item ${className}" draggable="true" data-index="${index}">
                     <div class="drag-handle" title="ドラッグで並び替え"></div>
                     <input type="checkbox" id="store-${index}" value="${store.name}">
                     <label for="store-${index}">${store.name}</label>
-                </div>
-            `).join('');
+                </div>`;
+            }).join('');
 
             // チェックボックスに変更イベントを追加
             document.querySelectorAll('input[type="checkbox"]').forEach(checkbox => {
@@ -366,6 +403,7 @@
 
             document.getElementById('totalCount').textContent = stores.length;
             document.getElementById('saveOrderBtn').disabled = stores.length === 0;
+            // formatBtn は常に有効（店舗選択不要）
         }
 
         // 選択状態を更新
@@ -375,9 +413,6 @@
             
             const submitBtn = document.getElementById('submitBtn');
             submitBtn.disabled = selectedCount === 0;
-            
-            const formatBtn = document.getElementById('formatBtn');
-            formatBtn.disabled = selectedCount === 0;
         }
 
         // ドラッグ＆ドロップで並び替え
@@ -480,6 +515,7 @@
             document.getElementById('formatBtn').disabled = false;
             document.getElementById('loading').style.display = 'none';
             document.getElementById('storeListContainer').style.display = 'grid';
+            renderStoreList();  // 店舗一覧を再描画（完了マーク反映）
             clearAll();
         }
 
@@ -498,17 +534,11 @@
 
         // Excel 自動整形を実行
         async function formatOffline() {
-            const selectedStores = Array.from(document.querySelectorAll('input[type="checkbox"]:checked'))
-                .map(checkbox => checkbox.value);
-
             // UI更新
             document.getElementById('formatBtn').disabled = true;
             document.getElementById('submitBtn').disabled = true;
             document.getElementById('loading').style.display = 'block';
             document.getElementById('storeListContainer').style.display = 'none';
-
-            // 選択状態を記録
-            selectedSet = new Set(selectedStores);
 
             try {
                 const response = await fetch('/api/format-offline', {
@@ -516,7 +546,7 @@
                     headers: {
                         'Content-Type': 'application/json',
                     },
-                    body: JSON.stringify({ stores: selectedStores })
+                    body: JSON.stringify({})
                 });
 
                 const result = await response.json();
@@ -524,6 +554,15 @@
                 if (!response.ok) {
                     throw new Error(result.error || 'Excel整形処理に失敗しました');
                 }
+
+                console.log('API レスポンス:', result);
+                console.log('完了した店舗:', result.completed_stores);
+
+                // 完了店舗にクラスを付与
+                completedStores = Array.isArray(result.completed_stores) ? result.completed_stores : [];
+                processedStores = Array.isArray(result.processed_stores) ? result.processed_stores : [];
+                console.log('completedStores に設定:', completedStores);
+                console.log('processedStores に設定:', processedStores);
 
                 showAlert(result.message, 'success');
                 // 3秒後にリセット
